--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.8.3
   firebase_core: ^2.27.1
   firebase_dart: ^1.1.3
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
