--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_dart: ^1.1.3
   flutter_staggered_grid_view: ^0.7.0
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like thi
   assets:
     - assets/images/
+    - videos/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
