--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   video_player: ^2.8.3
   firebase_core: ^2.27.1
-  #firebase_dart: ^1.1.3
   flutter_staggered_grid_view: ^0.7.0
+  font_awesome_icon_class: ^0.0.6
 
 dev_dependencies:
   flutter_test:
