--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.27.1
   flutter_staggered_grid_view: ^0.7.0
   font_awesome_icon_class: ^0.0.6
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
